backend/app/skills/cfn_terraform/input/17-multi-tier-web-app-in-vpc.json
{
  "AWSTemplateFormatVersion": "2010-09-09",

  "Description": "Modernized multi-tier web application in a VPC with public/private subnets across two AZs. Public subnets contain an internet-facing ALB, a NAT Gateway, and a bastion host. Private subnets contain a Frontend fleet behind the public ALB, an internal ALB, and a Backend fleet. **WARNING** This template creates load balancers, NAT Gateway, and EC2 instances. You will be billed for the AWS resources used.",

  "Parameters": {
    "KeyName": {
      "Description": "Name of an existing EC2 KeyPair to enable SSH access to the instances",
      "Type": "AWS::EC2::KeyPair::KeyName",
      "ConstraintDescription": "must be the name of an existing EC2 KeyPair."
    },

    "SSHLocation": {
      "Description": "Lockdown SSH access to the bastion host (default can be accessed from anywhere)",
      "Type": "String",
      "MinLength": "9",
      "MaxLength": "18",
      "Default": "0.0.0.0/0",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "must be a valid CIDR range of the form x.x.x.x/x."
    },

    "FrontendInstanceType": {
      "Description": "Frontend Server EC2 instance type",
      "Type": "String",
      "Default": "t3.small",
      "AllowedValues": ["t3.micro", "t3.small", "t3.medium", "t3.large", "t3.xlarge", "m5.large", "m5.xlarge", "m5.2xlarge", "c5.large", "c5.xlarge"],
      "ConstraintDescription": "must be a valid EC2 instance type."
    },

    "FrontendSize": {
      "Description": "Number of EC2 instances to launch for the Frontend server",
      "Type": "Number",
      "Default": "1"
    },

    "BackendInstanceType": {
      "Description": "Backend Server EC2 instance type",
      "Type": "String",
      "Default": "t3.small",
      "AllowedValues": ["t3.micro", "t3.small", "t3.medium", "t3.large", "t3.xlarge", "m5.large", "m5.xlarge", "m5.2xlarge", "c5.large", "c5.xlarge"],
      "ConstraintDescription": "must be a valid EC2 instance type."
    },

    "BackendSize": {
      "Description": "Number of EC2 instances to launch for the backend server",
      "Type": "Number",
      "Default": "1"
    },

    "BastionInstanceType": {
      "Description": "Bastion Host EC2 instance type",
      "Type": "String",
      "Default": "t3.micro",
      "AllowedValues": ["t3.micro", "t3.small", "t3.medium"],
      "ConstraintDescription": "must be a valid EC2 instance type."
    },

    "LatestAmiId": {
      "Description": "Amazon Linux 2 AMI (resolved via SSM Parameter Store)",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
      "Default": "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
    }
  },

  "Mappings": {
    "SubnetConfig": {
      "VPC":      { "CIDR": "10.0.0.0/16" },
      "Public1":  { "CIDR": "10.0.0.0/24" },
      "Public2":  { "CIDR": "10.0.2.0/24" },
      "Private1": { "CIDR": "10.0.1.0/24" },
      "Private2": { "CIDR": "10.0.3.0/24" }
    }
  },

  "Resources": {

    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": { "Fn::FindInMap": ["SubnetConfig", "VPC", "CIDR"] },
        "EnableDnsSupport": true,
        "EnableDnsHostnames": true,
        "Tags": [
          { "Key": "Application", "Value": { "Ref": "AWS::StackId" } },
          { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-VPC" } }
        ]
      }
    },

    "PublicSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "AvailabilityZone": { "Fn::Select": ["0", { "Fn::GetAZs": "" }] },
        "CidrBlock": { "Fn::FindInMap": ["SubnetConfig", "Public1", "CIDR"] },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          { "Key": "Application", "Value": { "Ref": "AWS::StackId" } },
          { "Key": "Network", "Value": "Public" },
          { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-PublicSubnet1" } }
        ]
      }
    },

    "PublicSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "AvailabilityZone": { "Fn::Select": ["1", { "Fn::GetAZs": "" }] },
        "CidrBlock": { "Fn::FindInMap": ["SubnetConfig", "Public2", "CIDR"] },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          { "Key": "Application", "Value": { "Ref": "AWS::StackId" } },
          { "Key": "Network", "Value": "Public" },
          { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-PublicSubnet2" } }
        ]
      }
    },

    "PrivateSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "AvailabilityZone": { "Fn::Select": ["0", { "Fn::GetAZs": "" }] },
        "CidrBlock": { "Fn::FindInMap": ["SubnetConfig", "Private1", "CIDR"] },
        "Tags": [
          { "Key": "Application", "Value": { "Ref": "AWS::StackId" } },
          { "Key": "Network", "Value": "Private" },
          { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-PrivateSubnet1" } }
        ]
      }
    },

    "PrivateSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "AvailabilityZone": { "Fn::Select": ["1", { "Fn::GetAZs": "" }] },
        "CidrBlock": { "Fn::FindInMap": ["SubnetConfig", "Private2", "CIDR"] },
        "Tags": [
          { "Key": "Application", "Value": { "Ref": "AWS::StackId" } },
          { "Key": "Network", "Value": "Private" },
          { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-PrivateSubnet2" } }
        ]
      }
    },

    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          { "Key": "Application", "Value": { "Ref": "AWS::StackId" } },
          { "Key": "Network", "Value": "Public" }
        ]
      }
    },

    "GatewayToInternet": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "InternetGatewayId": { "Ref": "InternetGateway" }
      }
    },

    "PublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [
          { "Key": "Application", "Value": { "Ref": "AWS::StackId" } },
          { "Key": "Network", "Value": "Public" }
        ]
      }
    },

    "PublicRoute": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "GatewayToInternet",
      "Properties": {
        "RouteTableId": { "Ref": "PublicRouteTable" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": { "Ref": "InternetGateway" }
      }
    },

    "PublicSubnet1RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PublicSubnet1" },
        "RouteTableId": { "Ref": "PublicRouteTable" }
      }
    },

    "PublicSubnet2RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PublicSubnet2" },
        "RouteTableId": { "Ref": "PublicRouteTable" }
      }
    },

    "PublicNetworkAcl": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [
          { "Key": "Application", "Value": { "Ref": "AWS::StackId" } },
          { "Key": "Network", "Value": "Public" }
        ]
      }
    },

    "InboundHTTPPublicNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "PublicNetworkAcl" },
        "RuleNumber": "100",
        "Protocol": "6",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": "0.0.0.0/0",
        "PortRange": { "From": "80", "To": "80" }
      }
    },

    "InboundHTTPSPublicNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "PublicNetworkAcl" },
        "RuleNumber": "101",
        "Protocol": "6",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": "0.0.0.0/0",
        "PortRange": { "From": "443", "To": "443" }
      }
    },

    "InboundSSHPublicNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "PublicNetworkAcl" },
        "RuleNumber": "102",
        "Protocol": "6",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": { "Ref": "SSHLocation" },
        "PortRange": { "From": "22", "To": "22" }
      }
    },

    "InboundEphemeralPublicNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "PublicNetworkAcl" },
        "RuleNumber": "103",
        "Protocol": "6",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": "0.0.0.0/0",
        "PortRange": { "From": "1024", "To": "65535" }
      }
    },

    "OutboundPublicNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "PublicNetworkAcl" },
        "RuleNumber": "100",
        "Protocol": "6",
        "RuleAction": "allow",
        "Egress": "true",
        "CidrBlock": "0.0.0.0/0",
        "PortRange": { "From": "0", "To": "65535" }
      }
    },

    "PublicSubnet1NetworkAclAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PublicSubnet1" },
        "NetworkAclId": { "Ref": "PublicNetworkAcl" }
      }
    },

    "PublicSubnet2NetworkAclAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PublicSubnet2" },
        "NetworkAclId": { "Ref": "PublicNetworkAcl" }
      }
    },

    "PrivateRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [
          { "Key": "Application", "Value": { "Ref": "AWS::StackId" } },
          { "Key": "Network", "Value": "Private" }
        ]
      }
    },

    "PrivateRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": { "Ref": "PrivateRouteTable" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": { "Ref": "NATGateway" }
      }
    },

    "PrivateSubnet1RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PrivateSubnet1" },
        "RouteTableId": { "Ref": "PrivateRouteTable" }
      }
    },

    "PrivateSubnet2RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PrivateSubnet2" },
        "RouteTableId": { "Ref": "PrivateRouteTable" }
      }
    },

    "PrivateNetworkAcl": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": { "Ref": "VPC" },
        "Tags": [
          { "Key": "Application", "Value": { "Ref": "AWS::StackId" } },
          { "Key": "Network", "Value": "Private" }
        ]
      }
    },

    "InboundPrivateNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "PrivateNetworkAcl" },
        "RuleNumber": "100",
        "Protocol": "6",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": "0.0.0.0/0",
        "PortRange": { "From": "0", "To": "65535" }
      }
    },

    "OutBoundPrivateNetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": { "Ref": "PrivateNetworkAcl" },
        "RuleNumber": "100",
        "Protocol": "6",
        "RuleAction": "allow",
        "Egress": "true",
        "CidrBlock": "0.0.0.0/0",
        "PortRange": { "From": "0", "To": "65535" }
      }
    },

    "PrivateSubnet1NetworkAclAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PrivateSubnet1" },
        "NetworkAclId": { "Ref": "PrivateNetworkAcl" }
      }
    },

    "PrivateSubnet2NetworkAclAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": { "Ref": "PrivateSubnet2" },
        "NetworkAclId": { "Ref": "PrivateNetworkAcl" }
      }
    },

    "NATGatewayEIP": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": "GatewayToInternet",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-NAT-EIP" } }
        ]
      }
    },

    "NATGateway": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": { "Fn::GetAtt": ["NATGatewayEIP", "AllocationId"] },
        "SubnetId": { "Ref": "PublicSubnet1" },
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-NATGateway" } }
        ]
      }
    },

    "BastionIPAddress": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": "GatewayToInternet",
      "Properties": {
        "Domain": "vpc",
        "InstanceId": { "Ref": "BastionHost" }
      }
    },

    "BastionHost": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "InstanceType": { "Ref": "BastionInstanceType" },
        "KeyName": { "Ref": "KeyName" },
        "SubnetId": { "Ref": "PublicSubnet1" },
        "ImageId": { "Ref": "LatestAmiId" },
        "SecurityGroupIds": [{ "Ref": "BastionSecurityGroup" }],
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-Bastion" } }
        ]
      }
    },

    "BastionSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Enable access to the Bastion host",
        "VpcId": { "Ref": "VPC" },
        "SecurityGroupIngress": [
          { "IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "CidrIp": { "Ref": "SSHLocation" } }
        ],
        "SecurityGroupEgress": [
          { "IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "CidrIp": { "Fn::FindInMap": ["SubnetConfig", "Private1", "CIDR"] } },
          { "IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "CidrIp": { "Fn::FindInMap": ["SubnetConfig", "Private2", "CIDR"] } }
        ]
      }
    },

    "PublicALB": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "Name": { "Fn::Sub": "${AWS::StackName}-pub-alb" },
        "Scheme": "internet-facing",
        "Type": "application",
        "SecurityGroups": [{ "Ref": "PublicLoadBalancerSecurityGroup" }],
        "Subnets": [{ "Ref": "PublicSubnet1" }, { "Ref": "PublicSubnet2" }],
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-PublicALB" } }
        ]
      }
    },

    "PublicALBTargetGroup": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Name": { "Fn::Sub": "${AWS::StackName}-fe-tg" },
        "Port": 80,
        "Protocol": "HTTP",
        "VpcId": { "Ref": "VPC" },
        "HealthCheckPath": "/",
        "HealthCheckIntervalSeconds": 30,
        "HealthCheckTimeoutSeconds": 10,
        "HealthyThresholdCount": 3,
        "UnhealthyThresholdCount": 5,
        "TargetType": "instance"
      }
    },

    "PublicALBListener": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "LoadBalancerArn": { "Ref": "PublicALB" },
        "Port": 80,
        "Protocol": "HTTP",
        "DefaultActions": [
          {
            "Type": "forward",
            "TargetGroupArn": { "Ref": "PublicALBTargetGroup" }
          }
        ]
      }
    },

    "PublicLoadBalancerSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Public ALB Security Group with HTTP access on port 80 from the internet",
        "VpcId": { "Ref": "VPC" },
        "SecurityGroupIngress": [
          { "IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "CidrIp": "0.0.0.0/0" }
        ],
        "SecurityGroupEgress": [
          { "IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "CidrIp": "0.0.0.0/0" }
        ]
      }
    },

    "FrontendFleet": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "DependsOn": "NATGateway",
      "CreationPolicy": {
        "ResourceSignal": {
          "Count": { "Ref": "FrontendSize" },
          "Timeout": "PT10M"
        }
      },
      "Properties": {
        "VPCZoneIdentifier": [{ "Ref": "PrivateSubnet1" }, { "Ref": "PrivateSubnet2" }],
        "LaunchTemplate": {
          "LaunchTemplateId": { "Ref": "FrontendLaunchTemplate" },
          "Version": { "Fn::GetAtt": ["FrontendLaunchTemplate", "LatestVersionNumber"] }
        },
        "MinSize": "1",
        "MaxSize": "10",
        "DesiredCapacity": { "Ref": "FrontendSize" },
        "TargetGroupARNs": [{ "Ref": "PublicALBTargetGroup" }],
        "Tags": [
          { "Key": "Network", "Value": "Private", "PropagateAtLaunch": "true" },
          { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-Frontend" }, "PropagateAtLaunch": "true" }
        ]
      }
    },

    "FrontendLaunchTemplate": {
      "Type": "AWS::EC2::LaunchTemplate",
      "Metadata": {
        "Comment1": "Configure the FrontendServer to forward /backend requests to the backend servers",
        "AWS::CloudFormation::Init": {
          "config": {
            "packages": {
              "yum": {
                "httpd": []
              }
            },
            "files": {
              "/var/www/html/index.html": {
                "content": { "Fn::Join": ["\n", [
                  "<h1>Congratulations, you have successfully launched the multi-tier AWS CloudFormation sample.</h1>",
                  "<p>This is a multi-tier web application launched in an Amazon Virtual Private Cloud (Amazon VPC) with multiple subnets across two Availability Zones. The public subnets contain an internet-facing ALB, a NAT Gateway, and a bastion host. The private subnets contain a Frontend fleet, an internal ALB, and a Backend fleet.</p>",
                  "<p>To serve a web page from the backend service, click <a href=\"/backend\">here</a>.</p>"
                ]]},
                "mode": "000644",
                "owner": "root",
                "group": "root"
              },
              "/etc/httpd/conf.d/maptobackend.conf": {
                "content": { "Fn::Join": ["", [
                  "ProxyPass /backend http://", { "Fn::GetAtt": ["PrivateALB", "DNSName"] }, "\n",
                  "ProxyPassReverse /backend http://", { "Fn::GetAtt": ["PrivateALB", "DNSName"] }, "\n"
                ]]},
                "mode": "000644",
                "owner": "root",
                "group": "root"
              }
            },
            "services": {
              "sysvinit": {
                "httpd": {
                  "enabled": "true",
                  "ensureRunning": "true",
                  "files": ["/etc/httpd/conf.d/maptobackend.conf", "/var/www/html/index.html"]
                }
              }
            }
          }
        }
      },
      "Properties": {
        "LaunchTemplateName": { "Fn::Sub": "${AWS::StackName}-frontend-lt" },
        "LaunchTemplateData": {
          "ImageId": { "Ref": "LatestAmiId" },
          "InstanceType": { "Ref": "FrontendInstanceType" },
          "KeyName": { "Ref": "KeyName" },
          "SecurityGroupIds": [{ "Ref": "FrontendSecurityGroup" }],
          "UserData": { "Fn::Base64": { "Fn::Join": ["", [
            "#!/bin/bash -xe\n",
            "yum update -y aws-cfn-bootstrap\n",
            "/opt/aws/bin/cfn-init -v --stack ", { "Ref": "AWS::StackId" }, " --resource FrontendLaunchTemplate ",
            " --region ", { "Ref": "AWS::Region" }, "\n",
            "/opt/aws/bin/cfn-signal -e $? --stack ", { "Ref": "AWS::StackId" }, " --resource FrontendFleet ",
            " --region ", { "Ref": "AWS::Region" }, "\n"
          ]]}}
        }
      }
    },

    "FrontendSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow access from load balancer and bastion as well as outbound HTTP and HTTPS traffic",
        "VpcId": { "Ref": "VPC" },
        "SecurityGroupIngress": [
          { "IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "SourceSecurityGroupId": { "Ref": "PublicLoadBalancerSecurityGroup" } },
          { "IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "SourceSecurityGroupId": { "Ref": "BastionSecurityGroup" } }
        ],
        "SecurityGroupEgress": [
          { "IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "CidrIp": "0.0.0.0/0" },
          { "IpProtocol": "tcp", "FromPort": "443", "ToPort": "443", "CidrIp": "0.0.0.0/0" }
        ]
      }
    },

    "PrivateALB": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "Name": { "Fn::Sub": "${AWS::StackName}-priv-alb" },
        "Scheme": "internal",
        "Type": "application",
        "SecurityGroups": [{ "Ref": "PrivateLoadBalancerSecurityGroup" }],
        "Subnets": [{ "Ref": "PrivateSubnet1" }, { "Ref": "PrivateSubnet2" }],
        "Tags": [
          { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-PrivateALB" } }
        ]
      }
    },

    "PrivateALBTargetGroup": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Name": { "Fn::Sub": "${AWS::StackName}-be-tg" },
        "Port": 80,
        "Protocol": "HTTP",
        "VpcId": { "Ref": "VPC" },
        "HealthCheckPath": "/",
        "HealthCheckIntervalSeconds": 30,
        "HealthCheckTimeoutSeconds": 10,
        "HealthyThresholdCount": 3,
        "UnhealthyThresholdCount": 5,
        "TargetType": "instance"
      }
    },

    "PrivateALBListener": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "LoadBalancerArn": { "Ref": "PrivateALB" },
        "Port": 80,
        "Protocol": "HTTP",
        "DefaultActions": [
          {
            "Type": "forward",
            "TargetGroupArn": { "Ref": "PrivateALBTargetGroup" }
          }
        ]
      }
    },

    "PrivateLoadBalancerSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Private ALB Security Group with HTTP access on port 80 from the Frontend Fleet only",
        "VpcId": { "Ref": "VPC" },
        "SecurityGroupIngress": [
          { "IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "SourceSecurityGroupId": { "Ref": "FrontendSecurityGroup" } }
        ],
        "SecurityGroupEgress": [
          { "IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "CidrIp": "0.0.0.0/0" }
        ]
      }
    },

    "BackendFleet": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "DependsOn": "NATGateway",
      "CreationPolicy": {
        "ResourceSignal": {
          "Count": { "Ref": "BackendSize" },
          "Timeout": "PT10M"
        }
      },
      "Properties": {
        "VPCZoneIdentifier": [{ "Ref": "PrivateSubnet1" }, { "Ref": "PrivateSubnet2" }],
        "LaunchTemplate": {
          "LaunchTemplateId": { "Ref": "BackendLaunchTemplate" },
          "Version": { "Fn::GetAtt": ["BackendLaunchTemplate", "LatestVersionNumber"] }
        },
        "MinSize": "1",
        "MaxSize": "10",
        "DesiredCapacity": { "Ref": "BackendSize" },
        "TargetGroupARNs": [{ "Ref": "PrivateALBTargetGroup" }],
        "Tags": [
          { "Key": "Network", "Value": "Private", "PropagateAtLaunch": "true" },
          { "Key": "Name", "Value": { "Fn::Sub": "${AWS::StackName}-Backend" }, "PropagateAtLaunch": "true" }
        ]
      }
    },

    "BackendLaunchTemplate": {
      "Type": "AWS::EC2::LaunchTemplate",
      "Metadata": {
        "Comment1": "Configure the Backend server to respond to requests",
        "AWS::CloudFormation::Init": {
          "config": {
            "packages": {
              "yum": {
                "httpd": []
              }
            },
            "files": {
              "/var/www/html/index.html": {
                "content": { "Fn::Join": ["\n", [
                  "<h1>Congratulations, this request was served from the backend fleet</h1>"
                ]]},
                "mode": "000644",
                "owner": "root",
                "group": "root"
              }
            },
            "services": {
              "sysvinit": {
                "httpd": {
                  "enabled": "true",
                  "ensureRunning": "true",
                  "files": ["/var/www/html/index.html"]
                }
              }
            }
          }
        }
      },
      "Properties": {
        "LaunchTemplateName": { "Fn::Sub": "${AWS::StackName}-backend-lt" },
        "LaunchTemplateData": {
          "ImageId": { "Ref": "LatestAmiId" },
          "InstanceType": { "Ref": "BackendInstanceType" },
          "KeyName": { "Ref": "KeyName" },
          "SecurityGroupIds": [{ "Ref": "BackendSecurityGroup" }],
          "UserData": { "Fn::Base64": { "Fn::Join": ["", [
            "#!/bin/bash -xe\n",
            "yum update -y aws-cfn-bootstrap\n",
            "/opt/aws/bin/cfn-init -v --stack ", { "Ref": "AWS::StackId" }, " --resource BackendLaunchTemplate ",
            " --region ", { "Ref": "AWS::Region" }, "\n",
            "/opt/aws/bin/cfn-signal -e $? --stack ", { "Ref": "AWS::StackId" }, " --resource BackendFleet ",
            " --region ", { "Ref": "AWS::Region" }, "\n"
          ]]}}
        }
      }
    },

    "BackendSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow access from private load balancer and bastion as well as outbound HTTP and HTTPS traffic",
        "VpcId": { "Ref": "VPC" },
        "SecurityGroupIngress": [
          { "IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "SourceSecurityGroupId": { "Ref": "PrivateLoadBalancerSecurityGroup" } },
          { "IpProtocol": "tcp", "FromPort": "22", "ToPort": "22", "SourceSecurityGroupId": { "Ref": "BastionSecurityGroup" } }
        ],
        "SecurityGroupEgress": [
          { "IpProtocol": "tcp", "FromPort": "80", "ToPort": "80", "CidrIp": "0.0.0.0/0" },
          { "IpProtocol": "tcp", "FromPort": "443", "ToPort": "443", "CidrIp": "0.0.0.0/0" }
        ]
      }
    }
  },

  "Outputs": {
    "WebSite": {
      "Description": "URL of the website",
      "Value": { "Fn::Join": ["", ["http://", { "Fn::GetAtt": ["PublicALB", "DNSName"] }]] }
    },
    "Bastion": {
      "Description": "IP Address of the Bastion host",
      "Value": { "Ref": "BastionIPAddress" }
    },
    "VPCID": {
      "Description": "VPC ID",
      "Value": { "Ref": "VPC" }
    },
    "PublicSubnets": {
      "Description": "Public Subnet IDs",
      "Value": { "Fn::Join": [",", [{ "Ref": "PublicSubnet1" }, { "Ref": "PublicSubnet2" }]] }
    },
    "PrivateSubnets": {
      "Description": "Private Subnet IDs",
      "Value": { "Fn::Join": [",", [{ "Ref": "PrivateSubnet1" }, { "Ref": "PrivateSubnet2" }]] }
    }
  }
}
